# src/service/backend/src/modules/users/infrastructure/schemas/user.schema.ts
@@ -1,0 +1,20 @@
+import { Entity, Index, Property, Unique } from '@mikro-orm/core';
+import { BaseSchema } from '../../../../shared/persistence/mikro-orm/base.schema';
+
+@Entity({ tableName: 'users' })
+@Unique({ properties: ['subjectId'] })
+@Unique({ properties: ['email'] })
+@Index({ properties: ['id'] })
+export class UserSchema extends BaseSchema {
+  @Property({ length: 64 })
+  subjectId!: string;
+
+  @Property({ length: 255 })
+  displayName!: string;
+
+  @Property({ length: 255 })
+  email!: string;
+
+  @Property({ length: 1024, nullable: true })
+  avatarUrl: string | null = null;
+}
